--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": false,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"ownerNumber": "6281312452957",
+	"ownerNumberr": "6281312452957",
+	"cr": "@Rakistore",
+	"ownername": "Raki Ganteng",
+	"botname":"RakiBotz",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  Raki - Botz  」\nCreated By @RakiStore"
 }
