--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": false,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6281312452957",
-	"ownerNumberr": "6281312452957",
-	"cr": "@Rakistore",
-	"ownername": "Raki Ganteng",
-	"botname":"RakiBotz",
+	"ownerNumber": "6289687694500",
+	"ownerNumberr": "6289687694500",
+	"cr": "@Bal Forum",
+	"ownername": "Bal Forum",
+	"botname":"Bal Forum Botz",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Raki - Botz  」\nCreated By @RakiStore"
+	"fake": " 「  Bal Forum Botz 」\nCreated By @Bal Forum"
 }
